--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
 						and released for free under the Creative Commons License.</h1>
 						<ul class="icons">
-							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/cecimanjonvidrios-327769017792137/?hc_ref=ARS3xh-KS9MKUcuCOZ665HJfgd0ZgXRGIRZT7OVqBVD-p1lzBuAZLooK-WgqNCq1ElQ&fref=nf&__xts__[0]=68.ARBZvt144RP3c82ViUOhg8Y4gNKRL_s8A5yJTR5A2yPd3kkyJpufEzGtCpH9qCcusQe6jgUs_wu3zynRw6rmcrt2XKUErmGQU8WfkTiEVD-vPQcdiJMFAMfMQ5h9EV_cUH76_FayTrYZKgq48n9ZCkjuqUNND441URT9z6XiZ-URoeikcNrrZVgYzgTMQWI3C1Q3s7b6G2ILrFJFIWI62ITxlyVAYNJcwokxY2WpadGQzzOeg01gLq2MxpyAKJ0qB7shk7o6pI76_xDpncp752yCm4B-PQLc6yjdByKSKMRxd0mNvvitF69TXrJU9JRljRDKMXf6-FYqJu8A7d45Rhs&__tn__=kC-R" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/cevidriosycolor/?hl=es" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
 							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
