--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
-						and released for free under the Creative Commons License.</h1>
+						<h1>Mi nombre es <strong>Cecilia</strong>, y soy la artesana number one del vidrio<br />
+						La más linda y la más mejor.</h1>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/cecimanjonvidrios-327769017792137/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/cevidriosycolor/?hl=es" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
