--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>Mi nombre es <strong>Cecilia</strong>, y soy la artesana number one del vidrio<br />
-						La más linda y la más mejor.</h1>
+						<h1>Mi nombre es <strong>Cecilia Manjón</strong>, y soy artesana y artista del vidrio<br />
+						.</h1>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/cecimanjonvidrios-327769017792137/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/cevidriosycolor/?hl=es" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
@@ -37,35 +37,35 @@
 								<div>
 									<a href="images/fulls/01.jpg">
 										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Arte en vidrio</h3>
+										<h3>Espejos</h3>
 									</a>
 									<a href="images/fulls/02.jpg">
 										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Vidrio a la flama</h3>
 									</a>
 								</div>
 								<div>
 									<a href="images/fulls/03.jpg">
 										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>mosaico en venecitas</h3>
 									</a>
 									<a href="images/fulls/04.jpg">
 										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Bijou en vidrio a la flama</h3>
 									</a>
 									<a href="images/fulls/05.jpg">
 										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Bijou en vitrofusión</h3>
 									</a>
 								</div>
 								<div>
 									<a href="images/fulls/06.jpg">
 										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Móviles en vitrofusión</h3>
 									</a>
 									<a href="images/fulls/07.jpg">
 										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Terrarios de vidrio en técnica Tiffany</h3>
 									</a>
 								</div>
 							</section>
