--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/cecimanjonvidrios-327769017792137/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/cevidriosycolor/?hl=es" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-							<li><a href=»mailto:ceci.manjon.vidrios@gmail.com class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=05491138763874" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+							<li><a href="mailto:ceci.manjon.vidrios@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
