prueba imagen extra
probe agregar una imagen en la columna 1ra. Va a estar duplicada

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 										<img src="images/thumbs/02.jpg" alt="" />
 										<h3>Dijes elaborados con la técnica de vidrio a la flama</h3>
 									</a>
+									<a href="images/fulls/02.jpg">
+										<img src="images/thumbs/02.jpg" alt="" />
+										<h3>Dijes elaborados con la técnica de vidrio a la flama</h3>
+									</a>
 								</div>
 								<div>
 									<a href="images/fulls/03.jpg">
