--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 										<img src="images/thumbs/02.jpg" alt="" />
 										<h3>Dijes elaborados con la técnica de vidrio a la flama</h3>
 									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Dijes elaborados con la técnica de vidrio a la flama</h3>
+									<a href="images/fulls/08.jpg">
+										<img src="images/thumbs/08.jpg" alt="" />
+										<h3>Pantalla para lámpara. Técnica Vitraux en plomo</h3>
 									</a>
 								</div>
 								<div>
