--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>Mi nombre es <strong>Cecilia Manjón</strong> <br/> Soy artesana y artista del vidrio<br />
+						<h1>Mi nombre es <strong>Cecilia Manjón</strong>.<br/>Soy artesana y artista del vidrio.<br />
 						</h1>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/cecimanjonvidrios-327769017792137/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
