--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. </p>
+						<p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Adaptado y puesto en línea por <a href="http://AnaliaPerez.github.io">Analía Perez</a> </p>
 					</footer>
 
 			</div>
